--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
 		<div class="container">
 
 			<nav class="navbar navbar-expand-lg navbar-dark">
-				<a class="navbar-brand" href="https://www.revolave.net"><img src="fonts/logo-light.svg" alt="Revolave"
+				<a class="navbar-brand" href="https://www.tolgacebeci.com"><img src="fonts/logo-light.svg" alt="Revolave"
 						style="width:250px;height:60px;"></a> <button aria-controls="navbarNavDropdown"
 					aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
 					data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span
@@ -285,7 +285,7 @@
 					<h2 class="section-privacy-text wow fadeInUp">
 						If you have any questions or suggestions about our Privacy Policy, do not
 						hesitate to contact us at <strong><a
-								href="mailto:revolave.studio@gmail.com">revolave.studio@gmail.com</a></strong>
+								href="mailto:tolgacebeci.studio@gmail.com">tolgacebeci.studio@gmail.com</a></strong>
 					</h2>
 					</p>
 				</div>
